--- a/RavnChallenge/RavnChallenge/Resources/es-419.lproj/Localizable.strings
+++ b/RavnChallenge/RavnChallenge/Resources/es-419.lproj/Localizable.strings
@@ -9,6 +9,12 @@
 // Common
 "alert.error.title" = "Ha ocurrido un Error";
 "alert.error.button.accept" = "Entendido";
+"alert.error.button.cancel" = "Cancelar";
+"alert.error.button.retry" = "Intentar Otra Vez";
+
+// Network NetworkReachability
+"reachability.alert.error.title" = "Problema de Conectividad";
+"reachability.alert.error.message" = "Existe un problema intentando conectar.\nPorfavor revisa tu conexión";
 
 // Pokemons List
 "pokemonList.bar.title" = "Listado Pokemon";
