--- a/RavnChallenge/RavnChallenge/Resources/es-419.lproj/Localizable.strings
+++ b/RavnChallenge/RavnChallenge/Resources/es-419.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 
 // Pokemons List
 "pokemonList.bar.title" = "Listado Pokemon";
+
+// Pokemon Detail
+"pokemonDetail.bar.title" = "Información Pokemon";
