chore: Localizes texts needed

--- a/RavnChallenge/RavnChallenge/Resources/en.lproj/Localizable.strings
+++ b/RavnChallenge/RavnChallenge/Resources/en.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 // Pokemon Detail
 "pokemonDetail.bar.title" = "Pokemon Info";
+"pokemonDetail.defaultSprite.text" = "Default Sprite";
+"pokemonDetail.shinySprite.text" = "Shiny Sprite";
