--- a/RavnChallenge/RavnChallenge/Resources/es-419.lproj/Localizable.strings
+++ b/RavnChallenge/RavnChallenge/Resources/es-419.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 // Pokemon Detail
 "pokemonDetail.bar.title" = "Información Pokemon";
+"pokemonDetail.defaultSprite.text" = "Imagen Normal";
+"pokemonDetail.shinySprite.text" = "Imagen Brillante";
